syntax = "proto3";

service Greetings {
  rpc Hello(HelloRequest) returns (HelloResponse);
  rpc Reset(ResetRequest) returns (ResetResponse);
}

message ResetRequest { }
message ResetResponse { }

message HelloRequest {
  string request_id = 1;
  string name = 2;
}

message HelloResponse {
  string greeting = 1;
}
